fix(blog): no vertical margin between post tags, looks bad wrapping

--- a/src/PublicApp/Resources/styles/modules/blog.scss
+++ b/src/PublicApp/Resources/styles/modules/blog.scss
@@ -95,6 +95,8 @@
 }
 .postTag{
 	display: inline-block;
+	//--undo standard <li> margin, looks bad when wrapping
+	margin-top: 0;
 }
 .postTagsList{
 	display: inline;
